# LearnML_Core

./: .gitmodules  CMakeLists.txt  README.md
extlib/include/nlohmann/: json.hpp
extlib/include/nlohmann/detail/: exceptions.hpp  json_pointer.hpp  macro_scope.hpp  macro_unscope.hpp  value_t.hpp
extlib/include/nlohmann/detail/conversions/: to_chars.hpp  to_json.hpp
extlib/include/nlohmann/detail/input/: binary_reader.hpp  input_adapters.hpp  json_sax.hpp  lexer.hpp  parser.hpp  position_t.hpp
extlib/include/nlohmann/detail/iterators/: iterator_traits.hpp
extlib/include/nlohmann/detail/meta/: detected.hpp  is_sax.hpp  type_traits.hpp
extlib/include/nlohmann/detail/output/: binary_writer.hpp  serializer.hpp
include/lml/: application.hpp  control.hpp  errorcode.hpp  extension_engine.hpp  form.hpp  http.hpp  languages.hpp  layer.hpp  log.hpp  matrix.hpp  network.hpp  options.hpp  platform.hpp  point.hpp  result.hpp  string.hpp  vector.hpp
include/lml/details/: errorcode.hpp  string.hpp
include/lml/layers/: fully_connected_layer.hpp  sigmoid_layer.hpp
include/lml/logs/: external_error.hpp  internal_error.hpp  message.hpp
include/lml/scenes/: main_scene.hpp
include/lml_edk/: config.hpp  engine.hpp  extension.hpp  function.hpp  function_table.hpp  language.hpp  layer.hpp  matrix.hpp  result.hpp  type.hpp
src/: application.cpp  extension_engine.cpp  http.cpp  languages.cpp  layer.cpp  main.cpp  matrix.cpp  options.cpp  result.cpp  vector.cpp
src/layers/: fully_connected_layer.cpp  sigmoid_layer.cpp
src/lml/: CMakeLists.txt  application.cpp  control.cpp  extension_engine.cpp  form.cpp  layer.cpp  log.cpp  main.cpp  matrix.cpp  network.cpp  options.cpp  platform.cpp  point.cpp  string.cpp
src/lml/layers/: fully_connected_layer.cpp  sigmoid_layer.cpp
src/lml/logs/: external_error.cpp  internal_error.cpp  message.cpp
src/lml/scenes/: main_scene.cpp
src/lml_edk/: CMakeLists.txt  engine.cpp  extension.cpp  function.cpp  language.cpp  layer.cpp  matrix.cpp
